--- a/package.json
+++ b/package.json
@@ -3,25 +3,48 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "predev": "pnpm run typegen",
     "dev": "next dev --turbopack",
+    "prebuild": "pnpm run typegen",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "biome format --write .",
+    "format:check": "biome format .",
+    "biome:check": "biome check .",
+    "biome:fix": "biome check --write .",
+    "typegen": "sanity schema extract --path=src/sanity/schema.json --enforce-required-fields && sanity typegen generate"
   },
   "dependencies": {
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@sanity/image-url": "1",
+    "@sanity/vision": "3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "embla-carousel-autoplay": "^8.6.0",
+    "embla-carousel-react": "^8.6.0",
+    "lucide-react": "^0.525.0",
+    "motion": "^12.23.6",
+    "next": "15.3.5",
+    "next-sanity": "9",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.3.5"
+    "sanity": "3",
+    "styled-components": "6",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@biomejs/biome": "2.1.1",
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "15.3.5",
-    "@eslint/eslintrc": "^3"
+    "tailwindcss": "^4",
+    "tw-animate-css": "^1.3.5",
+    "typescript": "^5"
   }
 }
