--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@sanity/client": "^7.8.1",
     "@sanity/image-url": "1",
     "@sanity/vision": "3",
     "class-variance-authority": "^0.7.1",
